--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/Phiyada222222/Fullstack-268-S02#readme",
   "dependencies": {
+    "axios": "^1.13.5",
     "dotenv": "^17.2.3",
+    "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "install": "^0.13.0",
+    "mongoose": "^7.0.0",
+    "path": "^0.12.7",
+    "pg": "^8.18.0",
     "prettier": "^3.8.0",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   }
 }
